--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
         }
 
         header {
-            background-color: #333;
+            background-color: #2c8bca;
             color: #fff;
             padding: 10px;
             text-align: center;
@@ -25,14 +25,14 @@
             max-width: 800px;
             margin: 20px auto;
             padding: 20px;
-            background-color: #fff;
+            background-color: white;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
         footer {
             text-align: center;
             padding: 10px;
-            background-color: #333;
+            background-color: #3e6bd3;
             color: #fff;
             position: fixed;
             bottom: 0;
@@ -56,11 +56,19 @@
         }
 
         button {
-            background-color: #333;
-            color: #fff;
+            background-color: #33333300;
+            color: #151515;
             padding: 10px;
-            border: none;
+            border: solid;
             cursor: pointer;
+        }
+        button:hover
+        {
+            background-color: green;
+            color: white;
+            /* padding: 10px; */
+            transform: scale(1.1);
+            border: red solid; 
         }
 
         /* Style for displaying the predicted price */
